--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.682.0",
     "@prisma/client": "^5.21.1",
+    "@ts-safeql/eslint-plugin": "^3.4.7",
+    "@types/bit-array": "^0.2.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
+    "@types/multer-s3": "^3.0.3",
+    "@types/ngeohash": "^0.6.8",
+    "bit-array": "^0.2.4",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "ngeohash": "^0.6.3",
     "tsc": "^2.0.4",
     "typescript": "^5.6.3",
     "zod": "^3.23.8"
