--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/multer": "^1.4.12",
     "@types/multer-s3": "^3.0.3",
     "@types/ngeohash": "^0.6.8",
+    "@types/ws": "^8.5.12",
     "bcrypt": "^5.1.1",
     "bit-array": "^0.2.4",
     "bitset": "^5.2.3",
@@ -34,6 +35,7 @@
     "ngeohash": "^0.6.3",
     "tsc": "^2.0.4",
     "typescript": "^5.6.3",
+    "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
